k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bacula-web
spec:
  selector:
    app: bacula-web
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
